# HW1-FAST-AQ-Parser

./: final_implementation.py  pyproject.toml
seqparser/: seq.py
tests/: test_parsers.py  test_transcribe.py  unit_test.fq
